syntax = "proto3";

package tester;

service OrderService{
  rpc CreateOrder (CrateOrderRequest) returns (CreateOrderResponse){};
  rpc FindAllOrders (FindAllOrdersRequest) returns (FindAllOrdersResponse){};
  rpc FindOneOrder (FindOneOrderRequest) returns (FindOneOrderResponse){};
}

message Order{
  string order_id = 1;
  string accont_id = 2;
  string asset_id = 3;
  int32  quantity = 4;
  string status = 5;
}

message CrateOrderRequest{
  string accont_id = 1;
  string asset_id = 2;
  int32  quantity = 3;
}

message CreateOrderResponse {
  Order order = 1;
}

message FindAllOrdersRequest{
  string accont_id = 1;
}

message FindAllOrdersResponse{
  repeated Order Orders = 1;
}

message FindOneOrderRequest{
  string order_id =1;
}

message FindOneOrderResponse{
  Order order = 1;
}